# -

./: .gitattributes  .gitignore  README.md  auto-rollcall-thu-tronclass.spec  pyproject.toml  reset-cookie-and-start.bat  run-rollcall.ps1  start-rollcall.bat
.github/workflows/: ci.yml
tests/: __init__.py  fake_tron_server.py  test_account_runtime_store.py  test_adapter_server.py  test_app_blueprint.py  test_app_qr_experience.py  test_app_shell.py  test_app_shell_dashboard.py  test_app_shell_polish.py  test_bot_handlers.py  test_bot_runtime.py  test_bot_status.py  test_cli.py  test_clipboard_qr.py  test_config_editor.py  test_config_format.py  test_config_view.py  test_course_discovery.py  test_debug_capture.py  test_discord_adapter.py  test_discord_gateway.py  test_fake_tron_server.py  test_global_radar_solver.py  test_group_runtime.py  test_input_safety.py  test_line_adapter.py  test_notification_bus.py  test_notification_delivery.py  test_number_direct_lookup.py  test_number_rollcall.py  test_observability.py  test_package_diagnostics.py  test_providers.py  test_qr_image.py  test_qr_rollcall.py  test_qr_teacher_runtime.py  test_radar_map_assist.py  test_radar_rollcall.py  test_radar_solver.py  test_readme_usage.py  (+18 more)
tests/fixtures/: qr_payloads.json
troTHU/: __init__.py  account_runtime_store.py  account_store.py  adapter_bridge.py  adapter_server.py  app_blueprint.py  app_qr_experience.py  app_shell.py  app_shell_dashboard.py  app_shell_polish.py  auth_runtime.py  bot_handlers.py  bot_runtime.py  bot_status.py  cli_accounts.py  cli_app.py  cli_bot.py  cli_courses.py  cli_main.py  cli_parser.py  cli_provider.py  cli_qr.py  cli_research.py  cli_system.py  cli_teacher.py  clipboard_qr.py  config_editor.py  config_format.py  config_runtime.py  config_view.py  connection_probe.py  course_discovery.py  debug_capture.py  discord_adapter.py  discord_gateway.py  global_radar_solver.py  group_runtime.py  input_safety.py  line_adapter.py  local_scanner.py  (+34 more)
