[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-rollcall-thu-tronclass"
version = "1.4a4"
description = "THU TronClass auto rollcall helper"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
  { name = "troTHU contributors" },
]
keywords = ["tronclass", "ilearn", "thu", "rollcall", "attendance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Education",
  "Natural Language :: Chinese (Traditional)",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
  # aiohttp floor raised to a recent security baseline (3.10.x maintenance tail);
  # PyYAML/PyNaCl are already at their latest published releases.
  "aiohttp>=3.10.11",
  "PyYAML>=6.0.2",
  "PyNaCl>=1.5.0",
  "ddddocr>=1.6.1",
  # Reading config.advanced.toml: stdlib tomllib on 3.11+, tomli backport on 3.10.
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
keyring = ["keyring>=24"]
packaging = ["PyInstaller>=6"]
qr-image = ["opencv-python-headless>=4.9", "Pillow>=10"]
browser = ["playwright>=1.44"]
dev = ["PyInstaller>=6", "keyring>=24", "ruff>=0.15,<0.16"]

[project.urls]
Homepage = "https://github.com/hot-YUser/auto-rollcall-thu-tronclass"
Repository = "https://github.com/hot-YUser/auto-rollcall-thu-tronclass"
Issues = "https://github.com/hot-YUser/auto-rollcall-thu-tronclass/issues"

[project.scripts]
trothu = "troTHU.tron:main"
auto-rollcall-thu-tronclass = "troTHU.tron:main"

[tool.setuptools]
packages = ["troTHU"]
include-package-data = false

[tool.ruff]
# Match the project's minimum supported runtime (requires-python = ">=3.10").
target-version = "py310"
# Generated/local-only trees are gitignored; never lint them.
extend-exclude = ["APP和網頁前端", "其他專案參考", "log", "state"]

[tool.ruff.lint]
# Conservative inaugural ruleset: ruff's sane default (E4/E7/E9 + F = pyflakes, which catches
# unused imports/variables and undefined names), plus flake8-future-annotations (FA) and the
# isort required-import rule (I002) that enforces `from __future__ import annotations` across the
# runtime package so the inconsistency cannot drift back. We intentionally do NOT enable full
# isort reordering (I001) or pyupgrade (UP) this round, to keep the diff focused and reviewable;
# revisit those as a follow-up once this baseline is green in CI.
extend-select = ["FA", "I002"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
# The required-import policy targets the runtime package; the offline test suite doesn't need it.
"tests/**" = ["I002"]
# runtime_context.py is the re-export facade hub: it imports stdlib modules and symbols
# purely to expose them as `ctx.<name>` for the rest of the package, so pyflakes'
# "imported but unused" (F401) is the wrong signal for this file specifically.
"troTHU/runtime_context.py" = ["F401"]
